Fix top right getting cut off

--- a/code/UI/Hud/InGameHud/PrimaryTask/PrimaryTask.razor.scss
+++ b/code/UI/Hud/InGameHud/PrimaryTask/PrimaryTask.razor.scss
@@ -11,13 +11,9 @@ PrimaryTask {
     .bg {
         position: absolute;
         right: 0px;
-        width: 700px;
-        height: 200px;
-        background-image: url("ui/hud/right.png");
         background-image-tint: rgba(white, 0.85);
-        background-repeat: no-repeat;
-        background-position: right top;
         image-rendering: pixelated;
+        background-repeat: no-repeat;
     }
 
     .main {
